welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:1: error: Missing closing brace `}' assumed here
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
^